@@ -1,0 +1,6 @@
+	.comm default_align_4,16
+	.comm align_1,32,1
+	.comm align_2,64,2
+	.comm align_4,128,3
+	.comm align_8,256,4
+
