@@ -1,3 +1,8 @@
+2001-06-20  Tom Rix  <trix@redhat.com>
+
+	* gas/ppc/aix.exp: New file, aix specific tests.
+	* gas/ppc/align.s: New file, .comm alignment test.
+
 2001-06-18  Philip Blundell  <philb@gnu.org>
 
 	* gas/arm/arm.exp (msr_bad): Deleted.
