@@ -1,3 +1,7 @@
+2000-06-20  Tom Rix <trix@redhat.com>
+
+	* config/tc-ppc.c (ppc_comm): Change default alignment to 4 bytes.
+
 2001-06-18  Philip Blundell  <philb@gnu.org>
 
 	* config/tc-arm.c (do_msr): Remove restriction on usage of
